Fix mobile padding and skill alignment

--- a/src/app/components/aboutme.module.css
+++ b/src/app/components/aboutme.module.css
@@ -94,5 +94,6 @@
 @media only screen and (max-width: 700px) {
     .skillsBlock {
         grid-template-columns: 1fr 1fr;
+        margin-top: -4vh;
     }
 }
